--- a/assets/playground.html
+++ b/assets/playground.html
@@ -1,36 +1,61 @@
 <style>
 
-canvas {
-  border: 1px solid #ccc;
-  margin: 20px;
-}
+  #data-menu {
+    float: left;
+    max-width: 370px;
+  }
+  #playground-canvas {
+    float: left;
+    width: 300px;
+    height: 300px;
+  }
+  canvas#output {
+    border: 1px solid #ccc;
+    width: 300px;
+    height: 300px;
+  }
+  #options {
+    float: left;
+    width: 200px;
+    margin-left: 20px;
+  }
 
-#intro-text {
-  width: 500px;
-}
+  .demo-data {
+    float: left;
+    margin: 5px;
+    padding: 5px;
+    width: 100px;
+    height: 100px;
+  }
+  .demo-data span {
+    font-size: 10px;
+    line-height: 15px;
 
-
+  }
 </style>
 <body onload="main()">
-<div id="intro-text">
-<h3>t-SNE Playground</h3>
-This demo is meant to be embedded in a t-SNE article.
-<p>
-</div>
+
 <div id="data-menu">
 </div>
-<div id="data-options">
+
+<div id="playground-canvas">
+  <canvas id="output" width=1200 height=1200></canvas>
+  <div id="data-description">
+  </div>
 </div>
-<div id="data-description">
+
+<div id="options">
+  <div id="data-options">
+  </div>
+  <div id="tsne-options">
+  </div>
 </div>
-<div id="tsne-options">
-</div>
+
 <button id="play-pause">Play</button>
 <button id="restart">Restart</button>
 <p>
   Step: <span id="step"></span>
-<p>
-<canvas id="output" width=1200 height=1200 style="width:600px;height:600px"></canvas>
+</p>
 
 </body>
 </html>
