Fixes css for columns of tsne plots

--- a/assets/figures_01.html
+++ b/assets/figures_01.html
@@ -1,13 +1,13 @@
 
-<div class="tsne-group">
-  <div class="original">
-    <span class="caption">Original</span>
-    <canvas class="tsne-plot"></canvas>
-    <a class="play">Play</a>
-  </div>
-  <div class="runners">
-  </div>
+
+<div class="original">
+  <span class="caption">Original</span>
+  <canvas class="tsne-plot"></canvas>
+  <button class="play">Play</button>
 </div>
+<div class="runners">
+</div>
+
 
 <script>
 (function() {
