refactor playground. enable clicking on figures

--- a/assets/figures_01.html
+++ b/assets/figures_01.html
@@ -33,6 +33,10 @@
   // examples
   var runners = dis.select(".runners").selectAll("div.runner").data(figure.examples)
     .enter().append("div").classed("runner", true)
+    .classed("clickable", true)
+    .on("click", function(d) {
+      updateStateFromFigure(figure, d)
+    })
 
   runners.append("span").classed("caption", true)
   .text(function(d) { return "Perplexity = " + d.perplexity})
