--- a/assets/playground.html
+++ b/assets/playground.html
@@ -30,6 +30,10 @@
     border-radius: 4px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   }
+  #data-menu .demo-data.selected {
+    border: 4px solid steelblue;
+
+  }
   #data-menu .demo-data span {
     display: none;
   }
