try out crude modal interaction

--- a/assets/playground.html
+++ b/assets/playground.html
@@ -5,9 +5,19 @@
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     padding: 24px 0;
+    background: #fcfcfc;
+    z-index: 1000;
   }
   #playground * {
     box-sizing: border-box;
+  }
+
+  #playground.modal {
+    position: fixed;
+    left: 10px;
+    right: 10px;
+    top: 50px;
+
   }
 
   /* Data Menu */
