--- a/assets/playground.html
+++ b/assets/playground.html
@@ -86,6 +86,7 @@
     align-items: center;
   }
   #play-controls button {
+    cursor: pointer;
     outline: none;
     border-radius: 50%;
     background: steelblue;
