--- a/assets/playground.html
+++ b/assets/playground.html
@@ -4,7 +4,8 @@
     font-family: 'Open Sans', sans-serif;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     /*border-bottom: 1px solid rgba(0, 0, 0, 0.1);*/
-    padding: 24px 0;
+    margin-top: 36px;
+    padding: 36px 0;
     background: #fcfcfc;
     z-index: 1000;
   }
