--- a/assets/tsne-group.html
+++ b/assets/tsne-group.html
@@ -8,6 +8,12 @@
   width: calc(5 * 100% / 6);
   position: relative;
 }*/
+
+.tsne-group .original {
+  padding-right: 12px;
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
+}
+
 .tsne-group .original,
 .tsne-group .runner {
   box-sizing: border-box;
@@ -15,15 +21,54 @@
   width: 100%;
   position: relative;
 }
+
 .tsne-group .runner {
   margin-left: 12px;
+  cursor: pointer;
 }
 
 .runner.clickable {
   cursor: pointer;
 }
 .runner.clickable:hover .image {
-  border-color: steelblue;
+  box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
+}
+
+.runner:hover i {
+  opacity: 1;
+}
+
+.runner.selected i {
+  opacity: 1;
+}
+
+.runner i {
+  font-size: 30px;
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  background-color: hsla(207, 44%, 79%, 0.8);
+  /*text-shadow: 0 0 8px rgb(70, 130, 180);*/
+  color: steelblue;
+  border-radius: 4px;
+  opacity: 0;
+  transition: opacity 0.3s;
+  line-height: 0;
+  width: 100%;
+  padding: 50% 0;
+  text-align: center;
+}
+
+.runner.selected .image::after {
+  content: "";
+  border: 3px solid rgba(70, 130, 180, 1);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  box-sizing: border-box;
+  border-radius: 4px;
+  z-index: 10;
 }
 
 .tsne-group .original h3 {
@@ -32,7 +77,6 @@
 }
 
 .tsne-group .image {
-  margin-top: 18px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   margin-bottom: 8px;
@@ -41,6 +85,11 @@
   padding-top: 100%;
   background: white;
   position: relative;
+  transition: border-color 0.3s, box-shadow 0.3s;
+}
+
+.tsne-group .original .image {
+  box-shadow: none;
 }
 
 .tsne-group .image img {
@@ -91,7 +140,9 @@
       runners
         .classed("clickable", true)
         .on("click", function(d) {
+          d3.selectAll(".runner").classed("selected", false)
           updateStateFromFigure(figure, d)
+          d3.select(this).classed("selected", true)
         });
     }
 
@@ -101,6 +152,10 @@
         .attr("src", function(d,i) {
           return "assets/figure_" + FIGURE + "_" + d.id + ".png"
         });
+
+    runners.append("i")
+        .classed("material-icons", true)
+        .text("open_in_browser")
 
     runners.append("div").classed("caption", true)
       .text(function(d) { return "Perplexity: " + format(d.perplexity); })
