--- a/assets/tsne-group.html
+++ b/assets/tsne-group.html
@@ -61,7 +61,7 @@
 
 .runner.selected .image::after {
   content: "";
-  border: 3px solid rgba(70, 130, 180, 1);
+  border: 2px solid rgba(70, 130, 180, 1);
   width: 100%;
   height: 100%;
   position: absolute;
@@ -141,7 +141,7 @@
         .classed("clickable", true)
         .on("click", function(d) {
           d3.selectAll(".runner").classed("selected", false)
-          updateStateFromFigure(figure, d)
+          updateStateFromFigure(figure, d, this);
           d3.select(this).classed("selected", true)
         });
     }
