--- a/assets/tsne-group.html
+++ b/assets/tsne-group.html
@@ -1,5 +1,12 @@
 <style>
+.original {
+  width: calc(100% / 6);
+  float: left;
+  position: relative;
+}
+
 .tsne-group {
+  width: 100%;
   overflow: visible;
   display: flex;
 }
